--- a/index.html
+++ b/index.html
@@ -36,21 +36,23 @@
         <video autoplay preload="auto" loop>
             <source src="video/hello-video.mp4" type="video/mp4">
         </video>
-        <h1 class='intro-title'>Want it? Just go for it!</h1>
     </div>
 
-    <section class="steps">
-        <div class="step-container">
-            <img src="img/discover-icon.png">
-            <h3 class="step-title">Discover!</h3>
-        </div>
-        <div class="step-container">
-            <img src="img/calendar-icon.png">
-            <h3 class="step-title">Apply!</h3>
-        </div>
-        <div class="step-container">
-            <img src="img/like-icon.png">
-            <h3 class="step-title">Enjoy!</h3>
+    <section class="hello">
+        <h1 class='hello-title'>Want it? Just go for it!</h1>
+        <div class="container">
+            <div class="step-container">
+                <img src="img/discover-icon.png">
+                <h3 class="step-title">Discover!</h3>
+            </div>
+            <div class="step-container">
+                <img src="img/calendar-icon.png">
+                <h3 class="step-title">Apply!</h3>
+            </div>
+            <div class="step-container">
+                <img src="img/like-icon.png">
+                <h3 class="step-title">Enjoy!</h3>
+            </div>
         </div>
     </section>
 </body>
